[gd_scene load_steps=2 format=3 uid="uid://be4n16tmr8s65"]

[ext_resource type="Script" uid="uid://d2wgur21xkhq7" path="res://core/ui/errorPopup/error_popup.gd" id="1_pf3y6"]

[node name="ErrorPopup" type="Container"]
custom_minimum_size = Vector2(200, 125)
anchors_preset = -1
anchor_top = -0.193
anchor_right = 0.174
offset_top = 125.064
offset_right = -0.447998
offset_bottom = 125.0
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 0
script = ExtResource("1_pf3y6")

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(200, 125)
layout_mode = 2
color = Color(0.784314, 0, 0, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(200, 125)
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "ERROR :"

[node name="Content" type="Label" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
text = "blablablablabla aze jds azazejazklejalkze qsd qsd qs dqs d d q sd qs "
autowrap_mode = 2

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
